<<<<<<< Updated upstream
<resources>
    <string name="app_name">SixthSenseApp</string>
    <string name="title_activity_application_settings">ApplicationSettings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
=======
<resources>
    <string name="app_name">SixthSenseApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tab_text_1">Monitor</string>
    <string name="tab_text_2">Prompts</string>
    <string name="tab_text_3">Toolbox</string>
    <string name="tab_text_4">Account</string>
    <string name="information">i</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="nightlight">nightlight</string>
    <string name="auto_on">auto activate</string>
    <string name="title_activity_terms_of_service">TermsOfServiceActivity</string>
</resources>
>>>>>>> Stashed changes
